hphp/hack/test/typecheck/reactive/parse_multiple3.php.exp
File "parse_multiple3.php", line 4, characters 3-27:
Multiple __Rx, __RxShallow, or __RxLocal annotations are not allowed. (Parsing[1002])
